1.1.11 - TBD
    * Renamed "Focal Offset" setting to "Subject Distance"
    * Windows installer skips overwriting the (more memory) shortcut
    * Fixed error causing emitter and sun intensity values below one to
    be equal to zero
    * Fixed error in headless mode that prevented rendering to start
    * Fixed crash when rendering in Water World mode
    * Water World check-box is correctly updated to reflect the current setting

1.1.10 - 2013-04-20
    * Added Emerald Ore and Nether Quartz Ore to the block highlight list
    * Added new projection modes (TOGoS)

1.1.9 - 2013-04-15
    * Disabled painting of slider values above slider knob in GTK/Snyth L&F
    * Add suffix to scene name to avoid scene name collisions
    * Removed need to pick scene name if scene name collision can be
	automatically avoided
    * Fixed undirectional furnaces being invisible
    * Fixed error causing double wooden slabs to render as single slabs
    * Improved command-line error checking
    * Added command-line option to override SPP target in headless mode
    * Fixed corner stair rendering errors (inner corners and quartz corner
    stairs rendered as non-corner stairs)

1.1.8 - 2013-03-27
    * Chunky now exits after completing a render in command-line mode
    * Chunky now remembers the "ray depth" setting, and changing the value
    does not reset the render
    * Fixed some errors in the UI
    * Ctrl+Q in the main window exits Chunky
    * Added icons to the tabs in the main window
    * Increased depth of field effect
    * Fixed animated texture loading (only load first animation frame)
    * Added option to merge render dump under the Advanced tab in the Render
    Controls dialog

1.1.7 - 2013-03-17
    * Increased maximum FoV value to 175 degrees for perspective projection
    * Increased FoV slider range in parallel projection mode
    * Ctrl+W now closes the 3D preview window
    * Added buttons for quick isometric camera setup