@@ -1,4 +1,6 @@
 1.1.11 - TBD
+    * It is now possible to lock the render controls to avoid inadvertent
+    render restarts.  The locking can be either manual or automatic.
     * Renamed "Focal Offset" setting to "Subject Distance"
     * Windows installer skips overwriting the (more memory) shortcut
     * Fixed error causing emitter and sun intensity values below one to
